# inventory-scan

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  settings.yaml
inventory_scan/: config.py  entry.py  spider.py
inventory_scan/handler/: __init__.py  amazon_handler.py  base.py  best_buy_handler.py
inventory_scan/notifier/: __init__.py  base.py  console_notifier.py  email_notifier.py  slack_notifier.py
inventory_scan/pipeline/: __init__.py  base.py  notifier_pipeline.py
