[tool.poetry]
name = "inventory-scan"
version = "0.0.1"
description = "Scan various web stores for product inventory"
authors = ["David Lam <david.lam@lamdav.com>"]
license = "MIT"


[tool.poetry.scripts]
inv = "inventory_scan.entry:inv"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
colorama = "^0.4.3"
dynaconf = { extras = ["yaml"], version = "^3.0.0" }
pydantic = "^1.6.1"
scrapy = "^2.3.0"
slackclient = "^2.9.1"
structlog = "^20.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.6.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
# https://github.com/python/black#how-black-wraps-lines
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
known_first_party=["inventory_scan"]
known_third_party=["click", "dynaconf", "itemadapter", "pydantic", "scrapy", "slack", "structlog"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | env
  | build
  | dist
)/
'''
