[tool.poetry]
name = "inventory-scan"
version = "0.0.1"
description = "Scan various web stores for product inventory"
authors = ["David Lam <david.lam@lamdav.com>"]
license = "MIT"


[tool.poetry.scripts]
inv = "inventory_scan.entry:inv"


[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
colorama = "^0.4.3"
dynaconf = { extras = ["yaml"], version = "^3.0.0" }
pydantic = "^1.6.1"
scrapy = "^2.6.2"
slackclient = "^2.9.1"
structlog = "^20.1.0"


[tool.poetry.dev-dependencies]
isort = "^5.6.1"
black = "^20.8b1"


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
